chat interface costraitned

--- a/xinihostel/src/main/res/layout/activity_chat_all.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_all.xml
@@ -18,14 +18,18 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:text="Messages"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintWidth_percent="0.5"/>
 
     <ImageView
         android:layout_width="0dp"
@@ -62,6 +66,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
