--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -20,60 +20,80 @@
 
     <ImageView
         android:id="@+id/activityChatPersonal_profilePicture"
-        android:layout_width="57dp"
-        android:layout_height="53dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintStart_toStartOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
-        app:srcCompat="@drawable/ic_male_avatr" />
+        app:srcCompat="@drawable/ic_male_avatr"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintWidth_percent="0.15"/>
 
     <TextView
         android:id="@+id/activityChatPersonal_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintHorizontal_bias="0.1"
         android:hint="Name"
-        android:textSize="25dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintEnd_toStartOf="@+id/imageView10"
         app:layout_constraintStart_toEndOf="@+id/activityChatPersonal_profilePicture"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.035"
+        app:layout_constraintWidth_percent="0.45"/>
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_film"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintEnd_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar" />
+        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintWidth_percent="0.08"/>
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_vertical_menu"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintEnd_toEndOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar" />
+        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.08"
+        app:layout_constraintHeight_percent="0.06"/>
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_chat_phone"
         app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
         app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar" />
+        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_percent="0.04"
+        app:layout_constraintWidth_percent="0.07"/>
 
     <EditText
         android:id="@+id/activityChatPersonal_editText"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edit_text_box"
         android:drawablePadding="10dp"
@@ -83,12 +103,14 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"/>
 
     <ImageView
         android:id="@+id/activityChatPersonal_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_chat_send"
@@ -97,7 +119,11 @@
         app:layout_constraintBottom_toBottomOf="@id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_editText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.08"
+        app:layout_constraintHeight_percent="0.05"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatPersonal_recyclerView"
