chat interface costraitned

--- a/xinihostel/src/main/res/layout/activity_chat_card_view.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_card_view.xml
@@ -41,6 +41,7 @@
         app:layout_constraintHeight_default="percent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintWidth_percent="0.2"
         />
 
     <TextView
