--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.core.widget.NestedScrollView
     android:id="@+id/activityChatPersonal_constraintLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatPersonal">
-
+    tools:context=".ChatPersonal"
+    android:fillViewport="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/activityChatPersonal_chatToolbar"
         android:layout_width="match_parent"
@@ -95,7 +98,7 @@
         android:id="@+id/activityChatPersonal_editText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/edit_text_box"
         android:drawablePadding="10dp"
         android:hint="Type a message"
@@ -106,7 +109,9 @@
         app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.06"/>
+        app:layout_constraintHeight_percent="0.06"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <ImageView
         android:id="@+id/activityChatPersonal_send"
@@ -124,7 +129,8 @@
         app:layout_constraintHeight_default="percent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.08"
-        app:layout_constraintHeight_percent="0.05"/>
+        app:layout_constraintHeight_percent="0.05"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activityChatPersonal_recyclerView"
@@ -134,6 +140,7 @@
         app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar"
+        android:layout_marginBottom="2dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
