--- a/xinihostel/src/main/res/layout/text_view.xml
+++ b/xinihostel/src/main/res/layout/text_view.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sendMessageLinearLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="right"
-    android:orientation="vertical"/>
+    android:orientation="horizontal"
+    tools:ignore="RtlHardcoded"
+    android:layout_marginTop="25dp">
+    <TextView
+        android:id="@+id/chatSentMessageTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.7"
+        android:background="@drawable/received_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        android:textColor="@color/colorPrimary"
+        android:gravity="left"
+        android:layout_marginLeft="5dp"
+        android:textSize="17dp"
+        android:padding="10dp"
+        app:layout_constraintWidth_max="wrap"
+        />
+    <TextView
+        android:id="@+id/chatRecievedMessageTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintWidth_max="wrap"
+        android:background="@drawable/sent_message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        android:gravity="right"
+        android:textSize="17dp"
+        android:layout_marginRight="5dp"
+        android:padding="10dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
