--- a/xinihostel/src/main/res/layout/activity_about__us.xml
+++ b/xinihostel/src/main/res/layout/activity_about__us.xml
@@ -7,71 +7,59 @@
     tools:context=".About_Us"
     android:background="@color/colorPrimary">
 
+  <ImageView
+      android:id="@+id/icon"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:src="@mipmap/ic_full_icon_white_bg"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHeight_default="percent"
+      app:layout_constraintHeight_percent="0.2"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.909"
+      app:layout_constraintWidth_default="percent"
+      app:layout_constraintWidth_percent="0.3" />
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="4dp"
-        android:src="@drawable/ic_roof_logo"
-        app:layout_constraintBottom_toTopOf="@+id/textView17"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintWidth_percent="0.5"
-        />
+  <TextView
+      android:id="@+id/textView17"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:layout_marginBottom="24dp"
+      android:elevation="@dimen/menu_item_icon_size"
+      android:gravity="center"
+      android:text="About Us"
+      android:textColor="@color/colorAccent"
+      android:textSize="50dp"
+      app:layout_constraintBottom_toTopOf="@+id/textView19"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHeight_default="percent"
+      app:layout_constraintHeight_percent="0.1"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.789"
+      app:layout_constraintWidth_default="percent"
+      app:layout_constraintWidth_percent="0.8" />
 
-    <ImageView
-        android:layout_width="569dp"
-        android:layout_height="561dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="276dp"
-        android:src="@drawable/lightcircle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:layout_width="336dp"
-        android:layout_height="333dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginTop="516dp"
-        android:src="@drawable/lightcircle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:text="About Us"
-        android:textColor="@color/colorAccent"
-        android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView19"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.134"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:justificationMode="inter_word"
-        android:padding="15dp"
-        android:text="It is an online platform which acts as a bridge between renters and tenants. Here is an easy way to find a place in an unknown city that fits your criteria. Now you don't have to loose your sweat visiting and finding hostels all day but you can search them through our app, connect with owners and book them with just one click."
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="23dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.45"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="1" />
+  <TextView
+      android:id="@+id/textView19"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:justificationMode="inter_word"
+      android:padding="15dp"
+      android:text="It is an online platform which acts as a bridge between renters and tenants. Here is an easy way to find a place in an unknown city that fits your criteria. Now you don't have to loose your sweat visiting and finding hostels all day but you can search them through our app, connect with owners and book them with just one click."
+      android:textColor="@color/colorPrimaryDark"
+      android:textSize="20dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHeight_default="percent"
+      app:layout_constraintHeight_percent="0.45"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.584"
+      app:layout_constraintWidth_default="percent"
+      app:layout_constraintWidth_percent="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
