--- a/xinihostel/src/main/res/layout/layout_navigation_header.xml
+++ b/xinihostel/src/main/res/layout/layout_navigation_header.xml
@@ -13,38 +13,6 @@
     tools:ignore="RtlSymmetry">
 
 
-    <ImageView
-        android:layout_width="38dp"
-        android:layout_height="45dp"
-        android:src="@drawable/app_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.038"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.4" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:autoSizeTextType="uniform"
-        android:text="@string/xene"
-        android:textColor="@color/colorAccent"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".16"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.23" />
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/navigationImage"
         android:layout_width="0dp"
@@ -62,6 +30,21 @@
         app:layout_constraintWidth_percent=".25"
         app:civ_border_color="@color/colorAccent"
         app:civ_border_width="3dp"/>
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@mipmap/ic_navigation_full_logo_xini"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.038"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.3" />
 
     <TextView
         android:id="@+id/navigationName"
