--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -94,11 +94,24 @@
         app:layout_constraintHeight_percent="0.04"
         app:layout_constraintWidth_percent="0.07"/>
 
+        <TextView
+            android:id="@+id/activityChatPersonal_flag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Accept the equest to start conversation"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:enabled="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
     <EditText
         android:id="@+id/activityChatPersonal_editText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
+        android:enabled="false"
+        android:visibility="gone"
         android:background="@drawable/edit_text_box"
         android:drawablePadding="10dp"
         android:hint="Type a message"
@@ -117,6 +130,7 @@
         android:id="@+id/activityChatPersonal_send"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_chat_send"
@@ -132,15 +146,15 @@
         app:layout_constraintHeight_percent="0.05"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/activityChatPersonal_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar"
-        android:layout_marginBottom="2dp"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/activityChatPersonal_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
