--- a/xinihostel/src/main/res/layout/activity_student_details.xml
+++ b/xinihostel/src/main/res/layout/activity_student_details.xml
@@ -564,6 +564,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginRight="15dp"
+        android:visibility="gone"
         android:layout_marginBottom="70dp"
         android:backgroundTint="#ededed"
         android:elevation="2dp"
