--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/activityChatPersonal_profilePicture"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -35,64 +35,22 @@
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintWidth_percent="0.15"/>
 
-    <TextView
-        android:id="@+id/activityChatPersonal_name"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:hint="Name"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintEnd_toStartOf="@+id/imageView10"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.035"
-        app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintStart_toEndOf="@+id/activityChatPersonal_profilePicture"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.45" />
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_film"
-        app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintEnd_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintWidth_percent="0.08"/>
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_vertical_menu"
-        app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintEnd_toEndOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.08"
-        app:layout_constraintHeight_percent="0.06"/>
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_chat_phone"
-        app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_chatToolbar"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintHeight_percent="0.04"
-        app:layout_constraintWidth_percent="0.07"/>
+        <TextView
+            android:id="@+id/activityChatPersonal_name"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="Name"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/activityChatPersonal_chatToolbar"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.035"
+            app:layout_constraintHorizontal_bias="0.103"
+            app:layout_constraintStart_toEndOf="@+id/activityChatPersonal_profilePicture"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.428"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.45" />
 
         <TextView
             android:id="@+id/activityChatPersonal_flag"
