just close to finishing

--- a/xinihostel/src/main/res/layout/activity_home_page.xml
+++ b/xinihostel/src/main/res/layout/activity_home_page.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".HomePage"
-    android:id="@+id/homepageRefreshLayout">
+    android:id="@+id/homepageRefreshLayout"
+    android:background="@color/colorPrimary">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
