--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -10,7 +10,8 @@
     android:fillViewport="true">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/activityChatPersonal_chatToolbar"
         android:layout_width="match_parent"
@@ -52,67 +53,89 @@
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent="0.45" />
 
-        <TextView
-            android:id="@+id/activityChatPersonal_flag"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Accept the equest to start conversation"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:enabled="false"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/chatPersonalEditTextContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.06"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.98"
+            android:layout_marginBottom="7dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/chat_personal_edittext"
+            app:layout_constraintHeight_max="wrap">
 
-    <EditText
-        android:id="@+id/activityChatPersonal_editText"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
-        android:enabled="false"
-        android:visibility="gone"
-        android:background="@drawable/edit_text_box"
-        android:drawablePadding="10dp"
-        android:hint="Type a message"
-        android:paddingStart="10dp"
-        android:textColorHint="@color/secondary"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.06"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"/>
+            <TextView
+                android:id="@+id/activityChatPersonal_flag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:text="Accept the request to start conversation"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center"
+                android:visibility="gone"/>
 
-    <ImageView
-        android:id="@+id/activityChatPersonal_send"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_chat_send"
-        android:clickable="true"
-        android:onClick="sendMessage"
-        app:layout_constraintBottom_toBottomOf="@id/activityChatPersonal_editText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activityChatPersonal_editText"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.08"
-        app:layout_constraintHeight_percent="0.05"
-        />
+            <EditText
+                android:id="@+id/activityChatPersonal_editText"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:autoSizeTextType="uniform"
+                android:background="@null"
+                android:drawablePadding="10dp"
+                android:enabled="false"
+                android:hint="Type a message"
+                android:paddingStart="10dp"
+                android:textColorHint="@color/secondary"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.9"
+                android:textAlignment="viewStart"
+                android:visibility="gone"/>
 
+            <ImageView
+                android:id="@+id/activityChatPersonal_send"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:clickable="true"
+                android:onClick="sendMessage"
+                android:visibility="gone"
+                android:src="@drawable/ic_chat_send"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="0.7"
+                app:layout_constraintLeft_toRightOf="@id/activityChatPersonal_editText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.08"
+                android:scaleType="fitCenter"
+                android:layout_marginRight="2dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/activityChatPersonal_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/activityChatPersonal_editText"
+            app:layout_constraintBottom_toTopOf="@+id/chatPersonalEditTextContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/activityChatPersonal_chatToolbar"
+            android:background="@color/colorPrimary"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
