--- a/xinihostel/src/main/res/layout/activity_wishlist.xml
+++ b/xinihostel/src/main/res/layout/activity_wishlist.xml
@@ -5,7 +5,8 @@
     android:id="@+id/wishlistRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wishlist">
+    tools:context=".wishlist"
+    android:background="@color/colorPrimary">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
