--- a/xinihostel/src/main/res/layout/card_view.xml
+++ b/xinihostel/src/main/res/layout/card_view.xml
@@ -4,23 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    android:backgroundTint="#f6f6f6"
+    android:background="@color/colorPrimary"
     >
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="8dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:elevation="5dp">
+        android:translationZ="7dp">
         <ImageView
             android:id="@+id/studentImage"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:elevation="100dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +28,7 @@
             app:layout_constraintHeight_default="percent"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintHeight_percent=".6"
-            android:src="@drawable/demo_hostel"/>
+            android:src="@drawable/demo_hostel" />
 
         <ImageView
             android:id="@+id/img1"
@@ -38,7 +37,8 @@
             android:src="@drawable/dotted_line"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@+id/studentImage"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            android:translationZ="15dp"/>
 
         <TextView
             android:id="@+id/studentName"
@@ -51,7 +51,7 @@
             android:textColor="	#000000"
             app:layout_constraintTop_toBottomOf="@+id/img1"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent=".11"/>
+            app:layout_constraintHeight_percent=".11" />
         <TextView
             android:id="@+id/studentInstituteName"
             android:layout_width="wrap_content"
@@ -64,9 +64,35 @@
             app:layout_constraintTop_toBottomOf="@+id/studentName"
             tools:ignore="SmallSp"
             app:layout_constraintHeight_default="percent"
-            app:layout_constraintHeight_percent=".08"/>
+            app:layout_constraintHeight_percent=".08" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="status:"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.25"
+            app:layout_constraintWidth_max="wrap"
+            android:textColor="@color/colorPrimaryDark"/>
 
+        <TextView
+            android:id="@+id/studentStatus"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.4"
+            android:layout_marginBottom="5dp"/>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -89,8 +115,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:is_enabled="false" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.cardview.widget.CardView>
