just close to complete

--- a/xinihostel/src/main/res/drawable/ic_camera.xml
+++ b/xinihostel/src/main/res/drawable/ic_camera.xml
@@ -1,20 +1,24 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M8,7l0.74,-1.11A2,2 0,0 1,10.404 5h3.192a2,2 0,0 1,1.664 0.89L16,7h5v11H3V7h5z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="@color/colorAccent"
-      android:strokeLineCap="square"/>
-  <path
-      android:pathData="M12,12m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="@color/colorAccent"
-      android:strokeLineCap="square"/>
+<vector android:autoMirrored="true" android:height="32dp"
+    android:viewportHeight="32" android:viewportWidth="32"
+    android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#586597"
+        android:pathData="m25.3736,0.9984v2.6719c0,0.398 -0.1581,0.779 -0.4395,1.0605l-1.0605,1.0605 -0.9395,-0.9395c-0.2908,-0.2908 -0.6756,-0.4355 -1.0605,-0.4355 -0.385,0 -0.7698,0.1447 -1.0606,0.4355l-0.4394,0.4395 -0.3536,-0.3535c-0.2811,-0.2812 -0.6629,-0.4394 -1.0605,-0.4394h-1.6699c-0.3993,0 -0.7831,0.1602 -1.0645,0.4434l-14.541,14.6309c-0.2792,0.2809 -0.4355,0.6626 -0.4355,1.0586v2.0859a0.5001,0.5001 0,0 0,0.8613 0.3457l0.5488,-0.5723 2.3633,2.3652c0.6038,0.604 1.61,0.5763 2.1797,-0.0605l1.7754,-1.9863 0.8359,0.8359c0.5816,0.5816 1.5395,0.5816 2.1211,0l4.9199,-4.9199 3.9336,3.9316c-0.1029,0.75 0.1239,1.538 0.6973,2.1113 0.9721,0.9721 2.563,0.9721 3.5351,0 0.084,-0.0837 0.1495,-0.1774 0.2188,-0.2695h4.5098v5.9941a0.5,0.5 0,1 0,1 0v-18.9863a0.5,0.5 0,0 0,-0.4922 -0.5078,0.5 0.5,0 0,0 -0.5078,0.5078v9.9922h-4.5118c-0.069,-0.0909 -0.1341,-0.183 -0.2168,-0.2656 -0.5733,-0.5733 -1.3613,-0.8002 -2.1113,-0.6973l-3.9336,-3.9316 0.6055,-0.6055h0.793a0.5001,0.5001 0,0 0,0.371 -0.1641l3.8653,-4.2949c0.5228,-0.5808 0.5062,-1.4766 -0.031,-2.0391l0.4414,-0.4394c0.5816,-0.5816 0.5816,-1.5415 0,-2.123l-0.4394,-0.4394 1.0605,-1.0605c0.4687,-0.4687 0.7325,-1.1048 0.7325,-1.7676v-2.6719z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#d7edf2"
+        android:pathData="m21.8736,5.4105c0.1269,0 0.2537,0.0507 0.3535,0.1504l2.0859,2.084c0.1995,0.1995 0.1995,0.5076 0,0.707l-0.4394,0.4395 -2.793,-2.793 0.4394,-0.4375c0.1,-0.0997 0.2267,-0.1504 0.3536,-0.1504z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#91a6b8"
+        android:pathData="m17.2896,5.4984h1.6699c0.1328,0 0.2596,0.053 0.3535,0.1465l3.2539,3.2559 -3.5566,3.7539 0.7265,0.6895 3.5391,-3.7344 0.5723,0.5723c0.1916,0.1916 0.2008,0.4861 0.019,0.6875l-3.7168,4.1289h-3.7773a0.5001,0.5001 0,0 0,-0.3536 0.1465l-4.8535,4.8535h-7.2929a0.5001,0.5001 0,0 0,-0.3614 0.1543l-1.2636,1.3203v-0.8418c0,-0.1322 0.051,-0.2597 0.1445,-0.3535l14.541,-14.6309c0.094,-0.095 0.2221,-0.1484 0.3555,-0.1484z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#b0dae4"
+        android:pathData="m16.5806,15.9984h1.5859l-6.9394,6.9394c-0.1995,0.1994 -0.5076,0.1994 -0.7071,0l-0.875,-0.875 0.9532,-1.0645h0.7754a0.5001,0.5001 0,0 0,0.3535 -0.1465z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#c6c6c6"
+        android:pathData="m18.2681,17.3109 l3.6055,3.6055c-0.1377,0.0908 -0.2679,0.1955 -0.3887,0.3164 -0.1209,0.1209 -0.2276,0.2511 -0.3184,0.3887l-3.6054,-3.6035z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#fff"
+        android:pathData="m5.0806,20.9984h4.1758l-1.9727,2.2031z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#eef396"
+        android:pathData="m3.8814,21.2132 l2.7363,2.7363 -0.1621,0.1797c-0.1961,0.2191 -0.5187,0.227 -0.7266,0.0195l-2.3789,-2.3809z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#b0dae4"
+        android:pathData="m23.2525,21.4984c0.3828,0 0.7655,0.1464 1.0605,0.4414 0.59,0.59 0.59,1.5311 0,2.1211 -0.59,0.59 -1.5311,0.59 -2.1211,0 -0.5899,-0.5899 -0.59,-1.5311 0,-2.1211 0.295,-0.295 0.6777,-0.4414 1.0606,-0.4414z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#c6c6c6"
+        android:pathData="m25.6958,22.4984h4.0528v1h-4.0508c0.066,-0.3299 0.065,-0.6702 0,-1z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#586597"
+        android:pathData="m23.6062,22.6484a0.5,0.5 65.9854,0 1,-0 0.7071,0.5 0.5,65.9854 0,1 -0.7071,-0 0.5,0.5 65.9854,0 1,0 -0.7071,0.5 0.5,65.9854 0,1 0.7071,0z" android:strokeColor="#00000000"/>
 </vector>
