--- a/xinihostel/src/main/res/layout/profile.xml
+++ b/xinihostel/src/main/res/layout/profile.xml
@@ -533,7 +533,7 @@
             android:layout_height="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/ic_spoon"
+            android:drawableLeft="@drawable/ic_cooler"
             android:enabled="false"
             android:text="Cooler"
             app:layout_constraintEnd_toEndOf="parent"
@@ -551,7 +551,7 @@
             android:layout_height="0dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="40dp"
-            android:drawableLeft="@drawable/ic_washing_machine"
+            android:drawableLeft="@drawable/ic_camera"
             android:enabled="false"
             android:text="CCTV"
             app:layout_constraintEnd_toEndOf="parent"
@@ -568,7 +568,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/ic_spoon"
+            android:drawableLeft="@drawable/ic_security_gate"
             android:enabled="false"
             android:text="Security Gaurd"
             app:layout_constraintEnd_toEndOf="parent"
@@ -585,7 +585,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@drawable/ic_spoon"
+            android:drawableLeft="@drawable/ic_parking"
             android:enabled="false"
             android:text="Parking"
             app:layout_constraintEnd_toEndOf="parent"
@@ -603,7 +603,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:drawableLeft="@drawable/ic_spoon"
+            android:drawableLeft="@drawable/ic_maid"
             android:enabled="false"
             android:text="House Keeping"
             android:layout_marginLeft="15dp"
