--- a/xinihostel/src/main/res/values/colors.xml
+++ b/xinihostel/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="secondary">#4E6E6B</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="colorAccentDark">#067A6F</color>
 </resources>
