--- a/xinihostel/src/main/res/layout/card_view.xml
+++ b/xinihostel/src/main/res/layout/card_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/homepage_cardview_background"
     >
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
