--- a/xinihostel/src/main/res/layout/activity_chat_card_view.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_card_view.xml
@@ -63,7 +63,7 @@
         app:layout_constraintWidth_percent="0.5"/>
 
     <ImageView
-        android:id="@+id/imageView14"
+        android:id="@+id/chatCardView_isOnline"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,6 +75,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.3"
-        app:srcCompat="@drawable/darkcircle" />
+        app:srcCompat="@drawable/redcircle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
