--- a/xinihostel/src/main/res/layout/activity_chat_personal.xml
+++ b/xinihostel/src/main/res/layout/activity_chat_personal.xml
@@ -94,8 +94,10 @@
                 android:enabled="false"
                 android:hint="Type a message"
                 android:paddingStart="10dp"
+                android:textAlignment="viewStart"
                 android:textColorHint="@color/secondary"
                 android:textSize="20dp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/activityChatPersonal_send"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -103,9 +105,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintWidth_default="percent"
-                app:layout_constraintWidth_percent="0.9"
-                android:textAlignment="viewStart"
-                android:visibility="gone"/>
+                app:layout_constraintWidth_percent="0.9" />
 
             <ImageView
                 android:id="@+id/activityChatPersonal_send"
