--- a/xinihostel/src/main/res/layout/activity_student_details.xml
+++ b/xinihostel/src/main/res/layout/activity_student_details.xml
@@ -579,5 +579,18 @@
     </ScrollView>
 
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/layoutPgPictures_startchat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="15dp"
+        android:visibility="gone"
+        android:layout_marginBottom="70dp"
+        android:backgroundTint="#ededed"
+        android:elevation="2dp"
+        android:src="@drawable/messageicon"
+        app:fabSize="mini"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
